2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/backend-library.scm (postscript->png): Fix comment and png
	message.

	* GNUmakefile.in (link-tree): Fix locales.

2005-03-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stencil-scheme.cc (LY_DEFINE): change to
	ly:stencil-aligned-to, non mutating.

	* scm/safe-lily.scm (lambda): remove ly:stencil-set-extent!

	* lily/stencil-scheme.cc: remove ly:stencil-set-extent!

	* lily/quote-iterator.cc (derived_mark): call
	Music_wrapper_iterator::derived_mark() too.

	* lily/grace-engraver.cc (derived_mark): change signature, add
	const.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct (symlink): 
	* GNUmakefile.in (link-tree): Add scripts to prefix.

	* lily/general-scheme.cc (ly:effective-prefix): New function.

	* scm/backend-library.scm (postscript->png): Use it.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/paper-score.cc (process): don't delete grobs after
	producing stencils. 

	* scm/part-combiner.scm (determine-split-list): switch off
	debugging info.

	* scm/backend-library.scm (postscript->png): explicitly use ps2png.py
	if available.

	* scm/define-context-properties.scm
	(all-user-translation-properties): add stringNumberOrientations.

	* lily/new-fingering-engraver.cc (position_scripts): make generic,
	so fingering and string-numbers are separately controlled.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix shared size test: add missing comma, do
	not use debugging.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile.in (local-WWW-post): remove UTF8 .htaccess.

	* config.hh.in: add HAVE_FONTCONFIG.

	* Documentation/user/instrument-notation.itely (String number
	indications): new node.

	* input/regression/new-markup-syntax.ly (texidoc): add circle.

	* lily/new-fingering-engraver.cc (add_string): new function. 
	(acknowledge_grob): accept string-number-event as well.
