@@ -1,3 +1,9 @@
+2005-03-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scripts/convert-ly.py (conv): add stencil-aligned-to! rule.
+	
+	* VERSION (PACKAGE_NAME):  release 2.5.17
+
 2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/backend-library.scm (postscript->png): Fix comment and png
